# mdgpu

./: CMakeLists.txt  GPUTimer.hpp  QR.cu  QR.hpp  README.md  cpu_utilities.cpp  device.cu  gpu_utilities.cu  main.cpp  utilities.h  utilitiesTypes.h
test/: Thumbs.db  readOutput_gpu.m
